--- a/custom_components/pushplus/manifest.json
+++ b/custom_components/pushplus/manifest.json
@@ -2,8 +2,8 @@
     "domain": "pushplus",
     "name": "PushPlus",
     "documentation": "https://github.com/wubin2/pushplus",
-    "dependencies": ["PushPlus For HomeAssistant notification"],
+    "dependencies": ["PushPlus notification for homeassistant."],
     "codeowners": ["@wubin2"],
     "requirements": [],
-    "version": "1.2"
+    "version": "v1.2"
   }
